# muon_optimizer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  example_usage.py  example_usage_test.py  minimalist_quadratic_optimization.py  mnist_optimizer_benchmark.py  muon_optimizer.py  muon_optimizer_test.py  pyproject.toml
.github/: CI_CD_GUIDE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
